--- a/SIP/september.html
+++ b/SIP/september.html
@@ -45,5 +45,8 @@
 <h3>September 5th, 2020. Day 171.<h3> 
   <p>Studying while side by side with my girlfriend on her sofa. I studied OWASP ZAP, nikto, and some networking stuff. She studied in MATLAB the whole day and I studied in my kali box the whole day. I took a break to go pick up lunch for us and to browse reddit. It was really hot today. Like not the hottest it has ever been but really very hot. 95 I think. Then in the evening we played dungeons and dragons and drank cold beverages.
   </p>
+<h3>September 6th, 2020. Day 172.<h3> 
+  <p>Today I woke up and cut my girlfriend's hair on her balcony. Then we watched church then communion and fellowship. Then panera bread and starbucks. Then her washing machine broke so we took all her dirty clothes (that weren't locked in her broken washing machine) to my place and did 3 loads of laundry. During this time we watched drunk history, brooklyn 99, and went to petsmart to pickup a bio-degradable litter box for her cat Mullen who was also at my house. He was very curious and had a fun time exploring I think.
+  </p>
   
     </html>
