--- a/SIP/september.html
+++ b/SIP/september.html
@@ -51,5 +51,8 @@
 <h3>September 7th, 2020. Day 173.<h3>  
   <p>Today is labor day. I did a box that half my team did yesterday. Then I had class at 11am to noon. Why do people always wait at the beginning of zoom calls? It has a set time that everyone knows, there is no reason to "wait 5 minutes to let people join" they should have been connected 5 minutes before the meeting started! Then because people know it really starts at 11:05 they joing at 11:05 in the future, further exacerbating the problem! Then I studied some more and played dominion with my family. Wow it is hot today. My studies go slower when it is hot, this has become obvious. I played gloomhaven at 4:30 with some friends then attended a family zoom meeting at 8pm. I didn't want to open the windows because of the smoke from the fires but it is just so hot my computer crashed. I have been gulping down ice water all day and have a wet towel on me with a fan.
   </p>
+<h3>September 8th, 2020. Day 174.<h3>  
+  <p>Today I am watching my girlfriend's cat. It is too hot where she lives and she goes into the office for work so the cat would be alone in 100+ degrees. So instead he is here with me! He is well-behaved and just chilling on my bed right now. I did a bunch of studying this morning and intend to maybe take a nap if it gets super hot. It is only supposed to get to 79 today though so maybe it won't be that bad.
+  </p>
   
     </html>
