--- a/SIP/september.html
+++ b/SIP/september.html
@@ -63,5 +63,8 @@
 <h3>September 11th, 2020. Day 177.<h3>  
   <p>On Monday salons will re-open indoors. The 14th of September. I think that means this journal ends there. Right? Anyways I studied a bunch of active directory today. Talked to my friend on the phone. Then played dnd with my Friday friends! Oh I also moved a ton of soil to the backyard and arranged it to begin dumping it into these brick planters. Oh also today I played one match of counter strike with friends. Over my lifetime I have played over 1500 hours easily. And yet I have been studying and not playing for months and I literally got 1 kill the entire match. I am terrible now. The end of an era.
   </p>
+<h3>September 11th, 2020. Day 177.<h3>
+  <p>The air is still bad today. I made spam fried rice for breakfast. I studied some bash. I am going to my girlfriend's place tonight and will attempt to fix her washing machine. When I say 'fix' I just mean try to make it so the door opens, currently it is locked and won't open.
+  </p>
   
     </html>
