--- a/SIP/september.html
+++ b/SIP/september.html
@@ -67,7 +67,7 @@
   <p>The air is still bad today. I made spam fried rice for breakfast. I studied some bash. I am going to my girlfriend's place tonight and will attempt to fix her washing machine. When I say 'fix' I just mean try to make it so the door opens, currently it is locked and won't open. We played a boardgame called Elder Sign, it was pretty fun!
   </p>
 <h3>September 13th, 2020. Day 179.<h3>
-  <p>I spent the morning with my girlfriend trying to fix the washing machine but we couldn't do it. Sucks. Then we attended church online. I went back home and studied then studied with my CPTC team.
+  <p>I spent the morning with my girlfriend trying to fix the washing machine but we couldn't do it. Sucks. Then we attended church online. I went back home and studied then studied with my CPTC team. We did a box on HTB called remote. We got user and root. I learned lots of new things, especially about windows.
   </p>
   
     </html>
