--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
           <LI>Python, Selenium, Jupyter Notebooks, Scraping, RegEx</LI>
           <p></p>          
 <h3> Experience</h3>
+         <p><b>SF Living Wage Coalition — Sys Admin Intern</b></p>
+         <p>September 2020 - PRESENT</p>
+          <LI>Troubleshooting NAS TeraStation backup</LI>
+          <LI>Managing Slack workspaces and channels</LI>
+          <LI>Identifying attacks via bot accounts</LI>
+          
          <p><b>Sixth Avenue Salon, 4334 California St — Stylist</b></p>
          <p>November 2019 - PRESENT</p>
           <LI>Booking appointments </LI>
