--- a/whitehat.html
+++ b/whitehat.html
@@ -49,7 +49,7 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
   <br>More tryhackme
-  <br>Bit the bullet and paid for tryhackme (8$ a month), "THM Ice", "THM Blaster", "HTB Remote"
+  <br>Bit the bullet and paid for tryhackme (8$ a month), "THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse"
 </p> 
 
 
