--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <h3> Experience</h3>
          <p><b>SF Living Wage Coalition — Sys Admin Intern</b></p>
          <p>September 2020 - PRESENT</p>
-          <LI>Troubleshooting NAS TeraStation backup</LI>
-          <LI>Managing Slack workspaces and channels</LI>
+          <LI>Troubleshooting NAS TeraStation backup. Researching applications to use.</LI>
+          <LI>Managing Slack workspaces and channels. New user onboarding media.</LI>
           <LI>Identifying attacks via bot accounts</LI>
           
          <p><b>Sixth Avenue Salon, 4334 California St — Stylist</b></p>
