--- a/whitehat.html
+++ b/whitehat.html
@@ -18,6 +18,7 @@
         <h1>My journey to become a whitehat</h1>
         <h2>YOU ARE NOT AUTHORIZED TO BE HERE. CLOSE YOUR BROWSER IMMEDIATELY.</h2>
         <script src="https://tryhackme.com/badge/160267"></script>
+        <script src="https://www.hackthebox.eu/badge/377371"></script>
         <section id="downloads">
           
         </section>
@@ -49,9 +50,11 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
   <br>More tryhackme
-  <br>Bit the bullet and paid for tryhackme (8$ a month), "THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse"
+  <br>Bit the bullet and paid for tryhackme (8$ a month), "THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
 </p> 
-
+<p>October, 2020 - 
+  <br>"HTB Buff", "HTB Worker"
+  </p>
 
 
 </font>
