--- a/whitehat.html
+++ b/whitehat.html
@@ -49,8 +49,7 @@ I finished 3 tryhackme rooms, including the pickle rick one.
   <br>Finished "Stapler" <walkthrough required>
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
-  <br>More tryhackme
-  <br>Bit the bullet and paid for tryhackme (8$ a month), "THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
+  <br>"THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
 </p> 
 <p>October, 2020 - 
   <br>"HTB Buff", "HTB Worker"
