--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h1><a href="http://stuartmrwong.com/">Stuart Wong</a></h1>
         <h2>The data lover's brother</h2>
         <h3><a href="mailto:Stuartmrwong@gmail.com">Stuartmrwong@gmail.com</a></h3>
+        <!-- 
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/march.html">My March Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/april.html">My April Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/june.html">My June Shelter in Place journal</a></h4>
@@ -37,7 +38,7 @@
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/august.html">My August Shelter in Place journal</a></h4>
         <h4 align="right"><a href="http://stuartmrwong.com/SIP/september.html">My September Shelter in Place journal</a></h4>
         <section id="downloads">
-          
+        -->  
         </section>
       </div>
     </header>
@@ -89,6 +90,9 @@
 
 
 <h3>Education</h3>
+        <p><b>City College of San Francisco</b></p>
+        <p>August 2020 - PRESENT</p>
+         <LI>Information Security Analyst Path. Am a member of the Collegiate Penetration Testing Competition team.</LI>
         <p><b>Cinta Aveda Institute — Cosmetology License</b></p> 
         <p>August 2016 - August 2017</p>
           <LI>Cutting, Coloring and styling hair. Chemical treatments. Nails and makeup. Facials and skincare. Blood spill protocols.</LI>
