--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <LI>Flexibility and Dependability</LI>
           <LI>Ability to work under time constraints and pressure</LI>
           <LI>Python, Selenium, Jupyter Notebooks, Scraping, RegEx</LI>
+          <LI>Open port enumeration, exploit vulnerability analysis, threat analysis, privilege escalation reporting, SQL dump and log analysis, Incident writeups.</LI>
           <p></p>          
 <h3> Experience</h3>
          <p><b>SF Living Wage Coalition — Sys Admin Intern</b></p>
