--- a/whitehat.html
+++ b/whitehat.html
@@ -52,7 +52,7 @@ I finished 3 tryhackme rooms, including the pickle rick one.
   <br>"THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
 </p> 
 <p>October, 2020 - 
-  <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist"
+  <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020
   </p>
 
 
