--- a/whitehat.html
+++ b/whitehat.html
@@ -53,6 +53,7 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 </p> 
 <p>October, 2020 - 
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020
+  <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
   </p>
 
 
