--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <p><b>City College of San Francisco</b></p>
         <p>August 2020 - PRESENT</p>
          <LI>Information Security Analyst Path. Am a member of the Collegiate Penetration Testing Competition team.</LI>
+          <LI><a href="https://twitter.com/nationalcptc/status/1320524078768377857">Winner of the CPTC 2020 Regionals</a>
         <p><b>Cinta Aveda Institute — Cosmetology License</b></p> 
         <p>August 2016 - August 2017</p>
           <LI>Cutting, Coloring and styling hair. Chemical treatments. Nails and makeup. Facials and skincare. Blood spill protocols.</LI>
