--- a/whitehat.html
+++ b/whitehat.html
@@ -51,10 +51,12 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 </p>  
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
   <br>"THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
+  <br>got an internship as a sys admin at ASEJ, applied for another internship at AVS next (didn't get it)
 </p> 
 <p>October, 2020 - 
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020, Cisco ITN
   <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
+  <br>applied for a job at pge 10/16, a job at BCO 10/22 + got a interview 10/26, another job at pge 10/27
   </p>
 
 
