--- a/whitehat.html
+++ b/whitehat.html
@@ -56,7 +56,7 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 <p>October, 2020 - 
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020, Cisco ITN
   <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
-  <br>applied for a job at pge 10/16, a job at BCO 10/22 + got a interview 10/26, another job at pge 10/27
+  <br>applied for a job at pge 10/16 (never heard back), a job at BCO 10/22 + got a interview 10/26, another job at pge 10/27 (Rejected on 10/28)
   </p>
 
 
