--- a/whitehat.html
+++ b/whitehat.html
@@ -53,10 +53,14 @@ I finished 3 tryhackme rooms, including the pickle rick one.
   <br>"THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
   <br>got an internship as a sys admin at ASEJ, applied for another internship at AVS next (didn't get it)
 </p> 
-<p>October, 2020 - 
+<p>October, 2020 
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020, Cisco ITN
   <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
-  <br>applied for a job at pge 10/16 (never heard back), a job at BCO 10/22 + got a interview 10/26, another job at pge 10/27 (Rejected on 10/28)
+  <br>applied for a job at pge 10/16 (never heard back), another job at pge 10/27 (Rejected on 10/28)
+  <br>cyber yoddha CTF 10/30
+  </p>
+  <p>November, 2020  
+  <br>applied for an IT Security Auditor position 10/22 + got a interview 10/26, 2 more interviews 11/2, got an offer on 11/12
   </p>
 
 
