--- a/whitehat.html
+++ b/whitehat.html
@@ -52,15 +52,20 @@ I finished 3 tryhackme rooms, including the pickle rick one.
 <p>September, 2020 - Certificate of Training - National Cybersecurity & Communications Integration Center - Industrial Control Systems - US DHS 
   <br>"THM Ice", "THM Blaster", "HTB Remote", "HTB Fuse", "HTB Blackfield"
   <br>got an internship as a sys admin at ASEJ, applied for another internship at AVS next (didn't get it)
+  <br>rejected by LBL, Dark Fiber (Lawrence Berkeley National Laboratory)
+  <br>rejected by Whole Foods, Cashier
 </p> 
 <p>October, 2020 
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020, Cisco ITN
   <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
-  <br>applied for a job at pge 10/16 (never heard back), another job at pge 10/27 (Rejected on 10/28)
+  <br>applied for a Cyber Security position at pge 10/16 (never heard back), another position at pge 10/27 (Rejected on 10/28)
   <br>cyber yoddha CTF 10/30
   </p>
   <p>November, 2020  
   <br>applied for an IT Security Auditor position 10/22 + got a interview 10/26, 2 more interviews 11/2, got an offer on 11/12
+  <br>I accepted the offer, start date November 30th.
+  <br>Hack for troops CTF
+  <br>HTB x UNI 2020 CTF
   </p>
 
 
