--- a/whitehat.html
+++ b/whitehat.html
@@ -59,13 +59,13 @@ I finished 3 tryhackme rooms, including the pickle rick one.
   <br>"HTB Buff", "HTB Worker", "HTB Admirer", "HTB Heist", "HTB Dante", CPTC 2020, Cisco ITN
   <br><a href="https://twitter.com/nationalcptc/status/1320524078768377857"> We won the CPTC 2020 Regionals and are going to Nationals</a>
   <br>applied for a Cyber Security position at pge 10/16 (never heard back), another position at pge 10/27 (Rejected on 10/28)
-  <br>cyber yoddha CTF 10/30
+  <br>cyber yoddha CTF 10/30 placed in top third of teams
   </p>
   <p>November, 2020  
   <br>applied for an IT Security Auditor position 10/22 + got a interview 10/26, 2 more interviews 11/2, got an offer on 11/12
   <br>I accepted the offer, start date November 30th.
-  <br>Hack for troops CTF
-  <br>HTB x UNI 2020 CTF
+  <br>Hack for troops CTF placed low but low effort as well
+  <br>HTB x UNI 2020 quals CTF placed 10th in the United States and 62 overall (out of 204)
   </p>
 
 
