--- a/index.html
+++ b/index.html
@@ -57,8 +57,14 @@
           <LI>Open port enumeration, exploit vulnerability analysis, threat analysis, privilege escalation reporting, SQL dump and log analysis, Incident writeups.</LI>
           <p></p>          
 <h3> Experience</h3>
+         <p><b>BDO USA, LLP — IT Security Auditor</b></p>
+         <p>November 2020 - PRESENT</p>
+          <LI>Auditing computer systems for SOX controls</LI>
+          <LI>Completion and testing of controls</LI>
+          <LI>Assess products (SaaS), systems, databases, and changes in existing processes</LI>
+          
          <p><b>SF Living Wage Coalition — Sys Admin Intern</b></p>
-         <p>September 2020 - PRESENT</p>
+         <p>September 2020 - November 2020</p>
           <LI>Troubleshooting NAS TeraStation backup. Researching applications to use.</LI>
           <LI>Managing Slack workspaces and channels. New user onboarding media.</LI>
           <LI>Identifying attacks via bot accounts</LI>
