--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 
 
 <!-- RESUME  -->
-<h3> Skills</h3>
-          <LI>Customer Service and Punctuality </LI>
-          <LI>Flexibility and Dependability</LI>
-          <LI>Ability to work under time constraints and pressure</LI>
-          <LI>Python, Selenium, Jupyter Notebooks, Scraping, RegEx</LI>
-          <LI>Open port enumeration, exploit vulnerability analysis, threat analysis, privilege escalation reporting, SQL dump and log analysis, Incident writeups.</LI>
-          <p></p>          
+        
 <h3> Experience</h3>
+          <p><b>Otsuka America, Inc. — Senior Internal Auditor</b></p>
+          <p>February 2023 - PRESENT</p>
+          <LI>IT Internal Audit</LI>
+          <LI>Project mangement for Auditboard implementation</LI>
+          <LI>JSOX</LI>
+          
          <p><b>BDO USA, LLP — IT Security Auditor</b></p>
-         <p>November 2020 - PRESENT</p>
+         <p>November 2020 - February 2023</p>
           <LI>Auditing computer systems for SOX controls</LI>
           <LI>Completion and testing of controls</LI>
           <LI>Assess products (SaaS), systems, databases, and changes in existing processes</LI>
@@ -94,11 +94,17 @@
  
     </UL>
 --> 
-
+<h3> Skills</h3>
+          <LI>Customer Service and Punctuality </LI>
+          <LI>Flexibility and Dependability</LI>
+          <LI>Ability to work under time constraints and pressure</LI>
+          <LI>Python, Selenium, Jupyter Notebooks, Scraping, RegEx</LI>
+          <LI>Open port enumeration, exploit vulnerability analysis, threat analysis, privilege escalation reporting, SQL dump and log analysis, Incident writeups.</LI>
+          <p></p>  
 
 <h3>Education</h3>
         <p><b>City College of San Francisco</b></p>
-        <p>August 2020 - PRESENT</p>
+        <p>August 2020 - January 2021</p>
          <LI>Information Security Analyst Path. Am a member of the Collegiate Penetration Testing Competition team.</LI>
           <LI><a href="https://twitter.com/nationalcptc/status/1320524078768377857">Winner of the CPTC 2020 Regionals</a>
         <p><b>Cinta Aveda Institute — Cosmetology License</b></p> 
