update index.html force deploy to github pages
update index.html force deploy to github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 
 <!-- RESUME  -->
-        
+<!-- Updated 3/14/2023  -->  
+          
 <h3> Experience</h3>
           <p><b>Otsuka America, Inc. — Senior Internal Auditor</b></p>
           <p>February 2023 - PRESENT</p>
